Use http client to retrieve Micronaut Launch select options
Try and set this up in a ports and adaptors type fashion
